2009-12-20  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=32735

        Upstream a test from chromium.org - ensure that creating a 
        new Image is actually creating an HTML image element, regardless
        of the doctype.

        * svg/custom/new-image-is-html-element-expected.txt: Added.
        * svg/custom/new-image-is-html-element.svg: Added.

2009-12-20  Dirk Pranke  <dpranke@fila-macpro.mtv.corp.google.com>

        Reviewed by Darin Adler.

        upstream test from chromium.org - this tests simulating italic
        on glyphs that don't have an italic version.

        https://bugs.webkit.org/show_bug.cgi?id=32693

        * fast/text/fake-italic.html: Added.
        * platform/mac/fast/text/fake-italic-expected.checksum: Added.
        * platform/mac/fast/text/fake-italic-expected.png: Added.
        * platform/mac/fast/text/fake-italic-expected.txt: Added.

2009-12-19  Adam Barth  <abarth@webkit.org>

        No review, rolling out r52399.
        http://trac.webkit.org/changeset/52399

        * websocket/tests/bad-sub-protocol-expected.txt:
        * websocket/tests/script-tests/url-parsing.js:
        * websocket/tests/url-parsing-expected.txt:

2009-12-19  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Add a test for window.open and JavaScript URLs.

        * http/tests/security/xss-DENIED-window-open-javascript-url-expected.txt: Added.
        * http/tests/security/xss-DENIED-window-open-javascript-url.html: Added.

2009-12-19  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Invalid url should raise SYNTAX_ERR exception.
        https://bugs.wbekit.org/show_bug.cgi?id=32700

        * websocket/tests/bad-sub-protocol-expected.txt: add CONSOLE MESSAGEs
        * websocket/tests/script-tests/url-parsing.js: add invalid url tests.