@@ -1,0 +1,10 @@
+<html>
+  <p>Original line 1</p>
+  <script src="resources/document-clear.js"></script>
+  <p>Calling document.clear() from an external script should not crash.</p>
+  <script>
+    if (window.layoutTestController)
+      layoutTestController.dumpAsText();
+  </script>
+  <p>If successful, there will be 4 lines total</p>
+</html>
