@@ -2,6 +2,18 @@
 
         Reviewed by Darin Adler.
 
+        Upstream a test from chromium.org that verifies that calling
+        document.clear() from an external script doesn't crash the browser.
+        https://bugs.webkit.org/show_bug.cgi?id=32743
+
+        * fast/dom/document-clear-expected.txt: Added.
+        * fast/dom/document-clear.html: Added.
+        * fast/dom/resources/document-clear.js: Added.
+
+2009-12-20  Dirk Pranke  <dpranke@chromium.org>
+
+        Reviewed by Darin Adler.
+
         https://bugs.webkit.org/show_bug.cgi?id=32735
 
         Upstream a test from chromium.org - ensure that creating a 
